# russian_bank_accounting

./: main.py  pyproject.toml
EDA_scripts/: explore_schema.py  preprocess_data.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
visualisations/: box_plots.py  journey_bands.py  master_grid_density.py  roa_histogram.py  sankey_plotly.py  sankey_plotly_v2.py  sankey_plotly_v3.py  sankey_plotly_v4.py  sankey_plotly_v5.py  sankey_plotly_v6.py  total_assets_time_series.py  variable_distributions_grid.py  variable_grid_density_viz_topright_stats.py  violin_plot.py
visualisations/html/: box_quarter_outliers_page10.html  box_quarter_outliers_page11.html  box_quarter_outliers_page12.html  box_quarter_outliers_page13.html  box_quarter_outliers_page2.html  box_quarter_outliers_page3.html  box_quarter_outliers_page5.html  box_quarter_outliers_page6.html  grid_density_amounts_page1.html  grid_density_amounts_page2.html  grid_density_amounts_page3.html  grid_density_percents_page1.html  grid_density_ratios_page1.html  log_total_assets_time_series.html  roa_density_plot.html  roa_density_plot_clipped.html  roa_histogram.html  roa_histogram_clipped.html  roa_histogram_full_range.html  roa_histogram_signed_log.html  sankey_companies_pct_of_loans.html  sankey_individuals_pct_of_loans.html  sankey_outcomes.html  sankey_ownership.html  sankey_ownership_4y_ma.html  sankey_ownership_4y_ma_FIX.html  sankey_ownership_4y_ma_LASTYEAR_RAW.html  sankey_ownership_4y_ma_LASTYEAR_RAW_fix.html  sankey_state_pct_of_loans.html  (+8 more)
(+9 files in other folders)
