[project]
name = "russian-bank-accounting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lets-plot>=4.7.3",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "scikit-learn>=1.5.1",
    "pyarrow>=17.0.0",
    "tqdm>=4.67.1",
]
